--- a/task2.ipynb
+++ b/task2.ipynb
@@ -38,24 +38,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "b51b3e11-b69c-45f8-a288-9798f4def535",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<string>, line 15)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m<string>:15\u001b[0;36m\u001b[0m\n\u001b[0;31m    except ValueError:\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2022-01-01', '2022-01-02', '2022-01-03']\n",
+      "[]\n",
+      "[]\n"
      ]
     }
    ],
    "source": [
     "from datetime import datetime, timedelta\n",
     "\n",
-    "def date_ranges(start_date, end_date):\n",
-    "     try:\n",
+    "def date_range(start_date, end_date):\n",
+    "    try:\n",
     "        start = datetime.strptime(start_date, \"%Y-%m-%d\")\n",
     "        end = datetime.strptime(end_date, \"%Y-%m-%d\")\n",
     "        if start > end:\n",
